force-app/main/default/objects/MarketingCloudNotification__c/MarketingCloudNotification__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de notifier Marketing Cloud de l&apos;envoi d&apos;un email, SMS ou courrier</description>
    <label>Notification Marketing Cloud</label>
    <nameField>
        <displayFormat>NMC/{YYYY}/{000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications Marketing Cloud</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>