force-app/main/default/objects/MarketingCloudNotification__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>