force-app/main/default/objects/MarketingCloudNotification__c/fields/creditMemo__c.field-meta.xml
<CustomField>
    <fullName>creditMemo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avoir</label>
    <referenceTo>CreditMemo__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>