force-app/main/default/objects/MarketingCloudNotification__c/fields/documentName__c.field-meta.xml
<CustomField>
    <fullName>documentName__c</fullName>
    <label>Nom du document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>