force-app/main/default/objects/MarketingCloudNotification__c/fields/documentURL__c.field-meta.xml
<CustomField>
    <fullName>documentURL__c</fullName>
    <label>URL du document</label>
    <type>Url</type>
</CustomField>