force-app/main/default/objects/MarketingCloudNotification__c/fields/invoice__c.field-meta.xml
<CustomField>
    <fullName>invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>