force-app/main/default/objects/MarketingCloudNotification__c/fields/KparKSignatory__c.field-meta.xml
<CustomField>
    <fullName>KparKSignatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signataire KparK</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>Notifications_Marketing_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>