force-app/main/default/objects/MarketingCloudNotification__c/fields/mobilePhoneInternational__c.field-meta.xml
<CustomField>
    <fullName>mobilePhoneInternational__c</fullName>
    <description>Numéro de téléphone mobile comprenant le code du pays (+33).
Nécessaire pour l&apos;envoi de SMS à travers Marketing Cloud</description>
    <inlineHelpText>Numéro de téléphone mobile comprenant le code du pays (+33).
Nécessaire pour l&apos;envoi de SMS à travers Marketing Cloud</inlineHelpText>
    <label>Téléphone mobile (int)</label>
    <type>Phone</type>
</CustomField>