force-app/main/default/objects/MarketingCloudNotification__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>