force-app/main/default/objects/MarketingCloudNotification__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>