force-app/main/default/objects/MarketingCloudNotification__c/fields/orderNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>orderNonCompliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-conformité commande</label>
    <referenceTo>OrderNonCompliance__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>Notifications_Marketing_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>