force-app/main/default/objects/MarketingCloudNotification__c/fields/quoteCPQ__c.field-meta.xml
<CustomField>
    <fullName>quoteCPQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis CPQ</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>