force-app/main/default/objects/MarketingCloudNotification__c/fields/salesEntity__c.field-meta.xml
<CustomField>
    <fullName>salesEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entité commerciale (magasin)</description>
    <label>Entité commerciale</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entité</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud (Entité commerciale)</relationshipLabel>
    <relationshipName>NotificationSalesEntities</relationshipName>
    <type>Lookup</type>
</CustomField>