force-app/main/default/objects/MarketingCloudNotification__c/fields/serviceAppointment__c.field-meta.xml
<CustomField>
    <fullName>serviceAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rendez-vous de service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>