force-app/main/default/objects/MarketingCloudNotification__c/fields/serviceEntity__c.field-meta.xml
<CustomField>
    <fullName>serviceEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entité de service (Dépôt)</description>
    <label>Entité service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entité</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud (Entité service)</relationshipLabel>
    <relationshipName>NotificationServiceEntities</relationshipName>
    <type>Lookup</type>
</CustomField>