force-app/main/default/objects/MarketingCloudNotification__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <formula>user__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fonction</label>
    <type>Text</type>
</CustomField>