force-app/main/default/objects/MarketingCloudNotification__c/fields/todayDate__c.field-meta.xml
<CustomField>
    <fullName>todayDate__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date du jour</label>
    <type>Date</type>
</CustomField>