force-app/main/default/objects/MarketingCloudNotification__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non collecté Install</fullName>
                <label>39_Non collecté Install</label>
            </value>
            <value>
                <fullName>Non collecté Install RAR</fullName>
                <label>39_Non collecté Install RAR</label>
            </value>
            <value>
                <fullName>acompte</fullName>
                <label>40_Acompte</label>
            </value>
            <value>
                <fullName>Modification mode financement</fullName>
                <label>41_Modification mode financement</label>
            </value>
            <value>
                <fullName>Annulation commande</fullName>
                <label>43_Annulation commande</label>
            </value>
            <value>
                <fullName>Refus de financement</fullName>
                <label>44_Refus de financement</label>
            </value>
            <value>
                <fullName>NCC</fullName>
                <label>48_NCC</label>
            </value>
            <value>
                <fullName>Client absent</fullName>
                <label>51_Client absent</label>
            </value>
            <value>
                <fullName>RDV Confirmé</fullName>
                <label>60_RDV Confirmé</label>
            </value>
            <value>
                <fullName>A finaliser</fullName>
                <label>63_A finaliser</label>
            </value>
            <value>
                <fullName>RDV non planifié Client</fullName>
                <label>66_RDV non planifié Client</label>
            </value>
            <value>
                <fullName>RDV d&apos;installation</fullName>
                <label>69_RDV d&apos;installation</label>
            </value>
            <value>
                <fullName>Relance subventions</fullName>
                <label>100_Relance subventions</label>
            </value>
            <value>
                <fullName>Notification RDV en route</fullName>
            </value>
            <value>
                <fullName>Notification RDV proximité</fullName>
            </value>
            <value>
                <fullName>Notification RDV J-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>