force-app/main/default/objects/MarketingCloudNotification__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervenant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications_Marketing_Cloud</relationshipName>
    <type>Lookup</type>
</CustomField>