force-app/main/default/objects/MarketingCloudNotification__c/fields/worksite__c.field-meta.xml
<CustomField>
    <fullName>worksite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chantier</label>
    <referenceTo>Chantier__c</referenceTo>
    <relationshipLabel>Notifications Marketing Cloud</relationshipLabel>
    <relationshipName>MarketingCloudNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>