force-app/main/default/objects/MarketingCloudNotification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>account__c</columns>
    <columns>serviceAppointment__c</columns>
    <columns>mobilePhoneInternational__c</columns>
    <columns>user__c</columns>
    <columns>serviceEntity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>en_US</language>
</ListView>