force-app/main/default/objects/MarketingCloudNotification__c/listViews/Notification_RDV_en_route.listView-meta.xml
<ListView>
    <fullName>Notification_RDV_en_route</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>account__c</columns>
    <columns>serviceAppointment__c</columns>
    <columns>mobilePhoneInternational__c</columns>
    <columns>user__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>type__c</field>
        <operation>equals</operation>
        <value>Notification RDV en route</value>
    </filters>
    <label>Notification RDV en route</label>
    <language>en_US</language>
</ListView>